--- a/app/globals.css
+++ b/app/globals.css
@@ -4,13 +4,13 @@
 
 :root {
   --background: #000000;
-  --foreground: #171717;
+  --foreground: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #000000;
+    --foreground: #ebebeb;
   }
 }
 
